fixed z-index

--- a/resources/scss/partials/_main.scss
+++ b/resources/scss/partials/_main.scss
@@ -2,6 +2,7 @@ main#main-app {
     background-color: #1c1c1c;
     color: white;
     position: relative;
+    z-index: 2;
 
     .jumbo {
         height: 50vh;
